--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,18 @@
 body {
     background-color: aqua;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: large;
+    font-size: x-large;
+    font-weight: 300;
+    
 
 }
 h1 {
     text-align: center;
+}
+.image {
+    text-align: center;
+}
+.main {
+    text-align: center;
+    font-size: larger;
 }
