add javascript folder and file

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body {
     font-weight: 300;
     margin: 3cm;
     padding: 0cm;
+    border: 5px solid black;
 
 }
 h1 {
@@ -22,3 +23,12 @@ h1 {
     text-align: center;
 
 }
+.main input[type=text] {
+    width: 20%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid red;
+    border-radius: 4px;
+  }
+
