add link to linkedin icon

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
     font-size: x-large;
     font-weight: 300;
     margin: 3cm;
-    padding: 0cm;
+    padding-bottom: 1cm;
     border: 5px solid black;
 
 }
